--- a/client/src/components/styles/Signup.css
+++ b/client/src/components/styles/Signup.css
@@ -15,3 +15,18 @@
     -moz-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
     box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
 }
+
+h2.form-heading {
+    color: #0EBE96;
+    text-align: center;
+    margin-top: 30px;
+    font-size: 3rem;
+}
+
+h4.form-subheading {
+    color: #6e6e6e;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 300;
+    margin-top: 0;
+}
