--- a/client/src/components/styles/Signup.css
+++ b/client/src/components/styles/Signup.css
@@ -1,7 +1,7 @@
 .signup-bc {
     background: #ccdfe3;
     height: 95vh;
-    padding-top: 60px;
+    padding-top: 20px;
 }
 
 .form-wrapper {
@@ -60,6 +60,10 @@ h4.form-subheading {
     color: #6e6e6e;
 }
 
+.input-row span {
+    cursor: pointer;
+}
+
 .input-row input .container{
     padding: 12px 20px;
     margin: 8px 0;
@@ -113,6 +117,20 @@ button {
     border-radius: 3px;
     padding-top: 12px;
     padding-bottom: 12px;
+    color: white;
+    font-size: 1.2rem;
+    margin-top: 8px;
 }
+
+.login-question {
+    color: #006175;
+    display: flex;
+    justify-content: center;
+    width: 70%;
+    margin: 20px auto 0 auto;
+    font-size: 1.1rem;
+}
+
+
    
  
