--- a/client/src/components/styles/Jumbotron.css
+++ b/client/src/components/styles/Jumbotron.css
@@ -6,13 +6,15 @@
 
 .jumbotron__header {
     text-align: center;
-    font-size: 4rem;
+    font-size: 3.7rem;
     padding-top: 50px;
+    text-transform: uppercase;
 }
 
 .jumbotron__subheader {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    
 }
 
 .cta {
@@ -22,7 +24,7 @@
 .cta__button {
     background: #ffb732;
     display: inline-block;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     padding: 20px 35px 20px 35px;
     margin-top: 24px;
     color: white;
@@ -31,6 +33,7 @@
     -moz-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
     box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
     transition: all .3s ease-in-out;
+    text-transform: uppercase;
 }
 
 .cta__button:hover {
@@ -74,7 +77,7 @@
 
 .question {
     color: #0EBE96;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 700;
     margin-top: 20px;
     width: 250px;
