--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -1,6 +1,6 @@
 .menu__wrapper {
-    background: #006175;
-
+    /* box-shadow: 0px 15px 10px -15px #111;  */
+    /* margin-bottom: 10px; */
 }
 .menu {
     margin: 0 auto;
