--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -1,7 +1,7 @@
 .Banner {
     background: url('../../images/605.jpg') no-repeat center center fixed;
     background-size: contain;
-    height: 100%;
+    height: 90%;
     display: flex;
     justify-content: flex-end;
 }
@@ -13,11 +13,16 @@
     height: 100%;
     margin: 0 auto;
     align-items: center;
+    color: #262d3f;
 }
 
 .banner__text {
     height: 50%;
     width: 50%;
+}
+
+.banner__text h1 {
+    font-size: 5rem;
 }
 /*
 
