--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 html, body {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 62.5%;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
