--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -1,14 +1,15 @@
 .footer {
     margin-top: 60px;
     text-align: right;
-    font-size: 1.1rem;
+    font-size: 1.6rem;
     margin-right: 20px;
     color: #6e6e6e;
+    padding-bottom: 20px;
+    padding-right: 20px;
 }
 
 .App {
     background: #69a0a3;
-    /* background: linear-gradient(331deg, rgba(1,169,206,1) 50%, rgba(17,214,204,1) 100%); */
     height: 100vh;
 
 }
