--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -1,9 +1,11 @@
 .Banner {
-    background: url('../../images/605.jpg') no-repeat center center fixed;
+
+    background: url('../../images/605.jpg') no-repeat center center;
     background-size: contain;
     height: 90%;
     display: flex;
     justify-content: flex-end;
+
 }
 
 .banner__content {
@@ -25,14 +27,57 @@
     font-size: 5rem;
 }
 
+.banner__text h3 {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.banner__text p {
+    font-size: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+
 .banner__content-sm {
     display: none;
 }
 
+.hand-icon {
+    display: inline-block;
+    padding-bottom: 3px;
+    font-size: 3rem;
+}
 
-@media (max-width: 800px) {
+.cta {
+    background: #ffb732;
+    display: inline-block;
+    font-size: 1.8rem;
+    padding: 20px 35px 20px 35px;
+    margin-top: 24px;
+    color: white;
+    border-radius: 2px;
+    -webkit-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
+    -moz-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
+    box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
+    transition: all .3s ease-in-out;
+    text-transform: uppercase;
+    margin-right: 15px;
+}
+
+.cta:hover {
+    background: #ffa500;
+}
+
+.cta-green {
+    background: #0EBE96;
+}
+
+@media (max-width: 900px) {
     .Banner {
-        background: url('../../images/606.jpg') no-repeat center center fixed;
+        background: url('../../images/606.jpg') no-repeat center center;
         background-size: contain;
     }
 
