--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -1,6 +1,5 @@
 .menu__wrapper {
-    /* box-shadow: 0px 15px 10px -15px #111;  */
-    /* margin-bottom: 10px; */
+ 
 }
 .menu {
     margin: 0 auto;
@@ -14,18 +13,18 @@
 }
 
 .menu__item {
-    color: #ccdfe3;
-    font-size: 1.3rem;
+    color: #dee8e9;
+    font-size: 1.6rem;
     font-weight: 200;
     margin-right: 15px;
-
+    text-decoration: none;
 }
 
 .menu__item:hover {
-    color: #99bfc7;
+    color: #bed2d3;
 }
 
 .brand {
-    font-size: 1.4rem;
+    font-size: 2rem;
     font-weight: 700;
 }
