--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -1,7 +1,4 @@
 .Banner {
-
-    background: url('../../images/605.jpg') no-repeat center center;
-    background-size: contain;
     height: 90%;
     display: flex;
     justify-content: flex-end;
@@ -9,6 +6,9 @@
 }
 
 .banner__content {
+    
+    background: url('../../images/605.jpg') no-repeat center center;
+    background-size: contain;
     display: flex;
     justify-content: flex-end;
     width: 80%;
@@ -16,10 +16,13 @@
     margin: 0 auto;
     align-items: center;
     color: #262d3f;
+    border: 2px solid #497072;
+    -webkit-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
+    box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
 }
 
 .banner__text {
-    height: 50%;
     width: 50%;
 }
 
@@ -75,19 +78,84 @@
     background: #0EBE96;
 }
 
+.p-sm {
+    font-size: 2.3rem;
+    text-transform: uppercase;
+    color: #262d3f;
+    font-weight: 700;
+}
+
+
+@media (max-width: 1300px) {
+    .banner__text {
+        width: 60%;
+    }
+
+}
+
+@media (max-width: 1100px) {
+
+    
+    .banner__text {
+        width: 60%;
+    }
+
+    .banner__text h1 {
+        font-size: 3rem;
+    }
+
+    .banner__text h3 {
+        font-size: 1.6rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+
+    .banner__text p {
+        font-size: 1.6rem;
+    }
+
+    .cta {
+
+        font-size: 1.6rem;
+        padding: 15px 30px 15px 30px;
+    }
+
+}
+
 @media (max-width: 900px) {
-    .Banner {
-        background: url('../../images/606.jpg') no-repeat center center;
-        background-size: contain;
+
+    .banner__text {
+        display: none;
     }
 
     .banner__content {
-        display: none;
+        background: url('../../images/606.jpg') no-repeat center center;
+        background-size: contain;
+        border: 2px solid #497072;
+        -webkit-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
+        -moz-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
+        box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
     }
 
     .banner__content-sm {
         display: block;
+        text-align: center;
         background: #69a0a3;
+        padding-top: 50px;
+        padding-bottom: 70px;
+    }
+
+    .banner__content-sm h1 {
+        font-size: 5rem;
+        color: white;
+    }
+
+    .banner__content-sm h3{
+        font-size: 2.3rem;
+        text-transform: uppercase;
+        color: #262d3f;
+        font-weight: 300;
     }
 
 }
