--- a/client/src/components/styles/Jumbotron.css
+++ b/client/src/components/styles/Jumbotron.css
@@ -3,7 +3,7 @@
     color: #262d3f;
     text-transform: uppercase;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 102px;
     margin-bottom: 0;
     padding-left: 8px;
 }
@@ -70,13 +70,22 @@
 }
 
 /*Media queries*/
-@media (max-width: 750px) {
+@media (max-width: 900px) {
+    .question {
+      color: #0EBE96;
+      font-size: 2rem;
+    }
+}
+
+@media (max-width: 850px) {
     .cards__wrapper {
       flex-direction: column;
       align-items: center;
+      color: #0EBE96;
     }
 
     .card:not(first-child) {
         margin-top: 40px;
     }
 }
+
