--- a/client/src/components/styles/Signup.css
+++ b/client/src/components/styles/Signup.css
@@ -1,14 +1,13 @@
 .signup-bc {
     background: #ccdfe3;
-    height: 95vh;
-    padding-top: 20px;
+    height: 100vh;
 }
 
 .form-wrapper {
     background: white;
     width: 50%;
     height: 90%;
-    margin: 0 auto 0 auto;
+    margin: 15px auto 0 auto;
     border-radius: 3px;
     border: 2px solid #b2cfd5;
     -webkit-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
