--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -78,6 +78,10 @@
     background: #0EBE96;
 }
 
+.cta-green:hover {
+    background: #0cab87;
+}
+
 .p-sm {
     font-size: 2.3rem;
     text-transform: uppercase;
