--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -6,43 +6,49 @@
 }
 
 .banner__content {
-    
-    background: url('../../images/605.jpg') no-repeat center center;
-    background-size: contain;
+ 
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
+    background: white;
     width: 80%;
     height: 100%;
     margin: 0 auto;
     align-items: center;
-    color: #262d3f;
-    border: 2px solid #497072;
     -webkit-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
     box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
 }
 
+.banner__img {
+    background: url('../../images/608.svg') no-repeat center center;
+    background-size: contain;
+    width: 40%;
+    height: 80%;
+}
+
 .banner__text {
-    width: 50%;
+    width: 40%;
+}
+
+.banner__text ul li{
+    list-style-type: none;
+    font-size: 2rem;
 }
 
 .banner__text h1 {
-    font-size: 5rem;
-}
-
-.banner__text h3 {
-    font-size: 2rem;
-    font-weight: 300;
+    font-size: 4.5rem;
+    font-weight: 400;
+    color: #0073e5;
     text-transform: uppercase;
-    margin-bottom: 40px;
 }
 
 .banner__text p {
     font-size: 2rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-top: 30px;
+    font-weight: 300;
+    color: #0073e5;
+    margin-bottom: 40px;
 }
+
 
 .banner__content-sm {
     display: none;
@@ -137,7 +143,7 @@
     }
 
     .banner__content {
-        background: url('../../images/606.jpg') no-repeat center center;
+        background: url('../../images/608.svg') no-repeat center center;
         background-size: contain;
         border: 2px solid #497072;
         -webkit-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
