--- a/client/src/components/styles/Jumbotron.css
+++ b/client/src/components/styles/Jumbotron.css
@@ -1,8 +1,9 @@
 .heading {
-    font-size: 5rem;
-    color: #262d3f;
-    text-transform: uppercase;
+    font-size: 4rem;
+    color: #0073e5;
     text-align: center;
+    text-transform: uppercase;
+    font-weight: 400;
     margin-top: 102px;
     margin-bottom: 0;
     padding-left: 8px;
@@ -53,8 +54,8 @@
 }
 
 .question {
-    color: #0EBE96;
-    font-size: 1.6rem;
+    color: #0073e5;
+    font-size: 1.9rem;
     font-weight: 400;
     margin-top: 20px;
     width: 250px;
