--- a/client/src/components/styles/Signup.css
+++ b/client/src/components/styles/Signup.css
@@ -1,5 +1,5 @@
 .signup-bc {
-    background: #ccdfe3;
+    background: #d2e2e3;
     height: auto;
     padding-bottom: 45.5px;
 }
@@ -44,7 +44,7 @@ h4.form-subheading {
     flex-direction: column;
     width: 100%;
     margin-bottom: 6px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .input-row label {
