--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
 html, body {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
