Changed colors for the homepage

--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -38,7 +38,7 @@
 .banner__text h1 {
     font-size: 4.5rem;
     font-weight: 400;
-    color: #0073e5;
+    color: #191919;
     text-transform: uppercase;
 }
 
