--- a/client/src/components/styles/Banner.css
+++ b/client/src/components/styles/Banner.css
@@ -42,13 +42,6 @@
     text-transform: uppercase;
 }
 
-.banner__text p {
-    font-size: 2rem;
-    font-weight: 300;
-    color: #0073e5;
-    margin-bottom: 40px;
-}
-
 
 .banner__content-sm {
     display: none;
@@ -114,7 +107,7 @@
     }
 
     .banner__text h1 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 
     .banner__text h3 {
@@ -143,25 +136,32 @@
     }
 
     .banner__content {
-        background: url('../../images/608.svg') no-repeat center center;
-        background-size: contain;
-        border: 2px solid #497072;
+        
         -webkit-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
         -moz-box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
         box-shadow: 1px 4px 17px -3px rgba(0,0,0,0.75);
     }
 
+    .banner__img {
+        background: url('../../images/608.svg') no-repeat center center;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+    }
+
+
     .banner__content-sm {
         display: block;
         text-align: center;
-        background: #69a0a3;
-        padding-top: 50px;
+        background: #0ebe96;
         padding-bottom: 70px;
     }
 
     .banner__content-sm h1 {
-        font-size: 5rem;
+        font-size: 4rem;
+        text-transform: uppercase;
         color: white;
+        font-weight: 300;
     }
 
     .banner__content-sm h3{
