--- a/client/src/components/styles/Jumbotron.css
+++ b/client/src/components/styles/Jumbotron.css
@@ -36,7 +36,7 @@
 }
 
 .card {
-    border: 2px solid #0EBE96;
+    /* border: 2px solid #0EBE96; */
     position: relative;
     border-radius: 50%;
     width: 250px;
@@ -45,6 +45,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 1px 4px 17px -3px rgba(14,190,150,1);
 }
 
 .card-svg {
@@ -54,13 +55,19 @@
 }
 
 .question {
-    color: #0EBE96;
-    font-size: 1.7rem;
-    font-weight: 400;
+    color: #191919;
+    font-size: 2rem;
+    font-weight: 500;
     margin-top: 20px;
     width: 250px;
     text-align: center;
     line-height: 1.5;
+}
+
+.question p {
+    color: #6e6e6e;
+    font-size: 1.7rem;
+    font-weight: 400;
 }
 
 .questions__wrapper {
@@ -71,22 +78,12 @@
 }
 
 /*Media queries*/
-@media (max-width: 900px) {
-    .question {
-      color: #0EBE96;
-      font-size: 2rem;
-    }
-}
-
-@media (max-width: 850px) {
+@media (max-width: 1000px) {
     .cards__wrapper {
-      flex-direction: column;
-      align-items: center;
-      color: #0EBE96;
+        flex-direction: column;
+        align-items: center;
     }
 
-    .card:not(first-child) {
-        margin-top: 40px;
-    }
 }
+
 
