--- a/client/src/components/styles/Signup.css
+++ b/client/src/components/styles/Signup.css
@@ -1,5 +1,5 @@
 .signup-bc {
-    background: #d2e2e3;
+    background: #e6f8f4;
     height: auto;
     padding-bottom: 45.5px;
 }
@@ -10,7 +10,7 @@
     height: 90%;
     margin: 15px auto 0 auto;
     border-radius: 3px;
-    border: 2px solid #b2cfd5;
+    border: 2px solid white;
     -webkit-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
     -moz-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
     box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
