--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -1,4 +1,58 @@
 .main-background {
-    background: #69a0a3;
-    height: auto
+    background: #0ebe96;
+    height: auto;
+    padding: 50px 90px 60px 90px;
+}
+
+.headings-light {
+    color: #e6f8f4;
+}
+
+.brand-light {
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+    color: #e6f8f4;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.heading-light {
+    font-size: 4rem;
+    font-weight: 300;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.subheading-light {
+    font-size: 2rem;
+    margin-top: 8px;
+    padding-top: 0;
+    font-weight: 300;
+}
+
+.info__form {
+    height: 600px;
+    background: #9ee5d5;
+}
+
+.sections {
+    display: flex;
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 20px;
+    justify-content: center;
+    font-size: 2rem;
+
+}
+
+.sections div {
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #56d1b5;
+    border-bottom: 2px solid #56d1b5;
+}
+
+.sections .active {
+    color: #191919;
+    border-bottom: 2px solid #191919;
 }
