--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -63,13 +63,15 @@
     margin: 30px auto 0 auto;
 }
 
-.form__wrapper input {
+.form__wrapper input, textarea{
     padding: 12px 20px;
     margin: 8px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
     color: #6e6e6e;
     background-color: #fff !important;
+    resize: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 .input__row {
@@ -78,7 +80,18 @@
     justify-content: space-between;
 }
 
+.input-lg {
+    width: 100%;
+}
+
 .input-sm {
     width: 43%;
+}
+
+.counter {
+    text-align: right;
+    font-size: 1.5rem;
+    margin-top: 0;
+    color: #191919;
 }
 
