--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -69,7 +69,6 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     color: #6e6e6e;
-    background-color: #fff !important;
     resize: none;
     font-family: 'Roboto', sans-serif;
 }
@@ -82,6 +81,10 @@
 
 .input-lg {
     width: 100%;
+}
+
+.error {
+
 }
 
 .input-sm {
