--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -183,6 +183,26 @@
     padding-bottom: 10px;
 }
 
+::-webkit-file-upload-button {
+    background: white;
+    color: #0ebe96;
+    font-weight: 500;
+    border: none;
+    padding: 2px 10px 2px 5px;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+  }
+
+  ::-ms-browse {
+    background: white;
+    color: #0ebe96;
+    font-weight: 500;
+    border: none;
+    padding: 2px 10px 2px 5px;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+  }
+
 
 
 
