--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -34,6 +34,9 @@
     height: 600px;
     background: #9ee5d5;
     border-radius: 5px;
+    -webkit-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
+    -moz-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
+    box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
 }
 
 .sections {
@@ -206,4 +209,29 @@
 #select {
     padding-top: 11px;
     padding-bottom: 11px;
+}
+
+.label {
+    font-size: 1.5rem;
+    color: #191919; 
+    margin-top: 10px;
+}
+.button-align {
+    text-align: right;
+}
+
+.button {
+    margin-top: 40px;
+    background: #ffb732;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.5rem;
+    padding: 10px 35px 10px 35px;
+    color: white;
+    border-radius: 2px;
+    transition: all .3s ease-in-out;
+    margin-right: 15px;
+}
+
+.button:hover {
+    background: #ffa500;
 }
