--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -223,16 +223,16 @@
 
 .button {
     margin-top: 40px;
-    background: #ffb732;
+    background: #0EBE96;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.5rem;
     padding: 10px 35px 10px 35px;
     color: white;
-    border-radius: 2px;
+    border-radius: 3px;
     transition: all .3s ease-in-out;
     margin-right: 15px;
 }
 
 .button:hover {
-    background: #ffa500;
+    background: #0cab87;
 }
