Finished desctop styling of personalInfo page

--- a/client/src/components/styles/Dropzone.css
+++ b/client/src/components/styles/Dropzone.css
@@ -1,6 +1,6 @@
 .draggable {
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 20px 0 0 0;
     border: 1px solid #ccc;
     border-radius: 4px;
     color: #6e6e6e;
