--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -31,7 +31,7 @@
 }
 
 .info__form {
-    height: 600px;
+    height: auto;
     background: #9ee5d5;
     border-radius: 5px;
     -webkit-box-shadow: 4px 2px 17px 2px rgba(0,0,0,0.17);
@@ -110,6 +110,7 @@
     border: none;
 }
 
+
 .react-datepicker__header {
     width: 200px;
     background: #0ebe96;
@@ -179,7 +180,7 @@
 }
 
 .label-wide {
-    width: 60%;
+    width: 45%;
 }
 
 .label-wide .upload{
@@ -222,7 +223,7 @@
 }
 
 .button {
-    margin-top: 40px;
+    margin-top: 5px;
     background: #0EBE96;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.5rem;
@@ -231,6 +232,8 @@
     border-radius: 3px;
     transition: all .3s ease-in-out;
     margin-right: 15px;
+    margin-bottom: 35px;
+    outline: none;
 }
 
 .button:hover {
