--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -240,6 +240,13 @@
     background: #0cab87;
 }
 
+.err-message {
+    text-align: center;
+    font-size: 1.8rem;
+    margin-top: 30px;
+    color: #191919;
+}
+
 @media (max-width: 1150px) {
     .input__row-column {
         flex-direction: column;
