Started Experience2 component

--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -313,6 +313,11 @@
     text-align: right;
 }
 
+.left-heading {
+    justify-content: flex-start;
+    margin-top: 25px;
+}
+
 @media (max-width: 700px) {
     .sections {
 
