Started to add inputs to the Expertience2.js

--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -318,6 +318,11 @@
     margin-top: 25px;
 }
 
+.states {
+    display: inline-block;
+    width: 40%;
+}
+
 @media (max-width: 700px) {
     .sections {
 
