--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -323,6 +323,24 @@
     width: 40%;
 }
 
+
+.date-picker {
+    display: inline-block;
+    margin-right: 30px;
+}
+
+.aligned-btn {
+    margin-top: 30px;
+}
+
+@media (max-width: 1020px) {
+    .aligned-btn {
+        display: flex;
+        align-self: flex-end;
+        margin-top: none;
+    }
+}
+
 @media (max-width: 700px) {
     .sections {
 
