--- a/client/src/components/styles/PersonalInfo.css
+++ b/client/src/components/styles/PersonalInfo.css
@@ -333,6 +333,11 @@
     margin-top: 30px;
 }
 
+.form__wrapper input.errorStyle {
+    background: #ffd1d1;
+}
+
+
 @media (max-width: 1020px) {
     .aligned-btn {
         display: flex;
